the employee crud operation  and it's testing
